--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -19,8 +19,8 @@ body.illustration header {
 
 body.single header {
   @media screen and (max-width: 600px) {
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
   }
 }
 
@@ -41,7 +41,7 @@ header {
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 20px;
-    padding-right: 15px;
+    padding-right: 20px;
   }
 
   h1 {
@@ -67,6 +67,12 @@ header {
     font-weight: 400;
     line-height: 40px;
     text-align: center;
+    @media only screen and (max-width: 600px) {
+      margin-left: auto;
+      margin-right: auto;
+      max-width: 345px;
+      line-height: 30px;
+    }
   }
 
   nav {
