--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -268,10 +268,12 @@ body {
 
       @media only screen and (max-width: 600px) {
         .read {
+          top: 5px;
           left: 15px;
         }
 
         .close {
+          top: 5px;
           right: 15px;
         }
       }
@@ -293,6 +295,10 @@ body {
         z-index: 200;
         width: 100%;
         text-align: center;
+
+        @media only screen and (max-width: 600px) {
+          bottom: 5px;
+        }
 
         a {
           color: #9c9c9c;
@@ -355,7 +361,10 @@ body {
 
       @media only screen and (max-width: 768px) and (min-width: 376px) {
         .article--grid {
+          padding-left: 15px;
+          padding-right: 15px;
           max-width: 708px;
+          width: calc(100% - 30px);
 
           p {
             font-size: 29px;
@@ -412,8 +421,16 @@ body {
   }
 
   .swiper-container {
-    width: 100%;
+    margin-left: 50px;
+    margin-right: 50px;
+    width: calc(100% - 100px);
     height: 100%;
+
+    @media only screen and (max-width: 600px) {
+      margin-left: 15px;
+      margin-right: 15px;
+      width: calc(100% - 30px);
+    }
   }
 
   .swiper-slide {
